--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Sign-Up Form</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="image-holder">
+      <div>
+        <img class="side-background" src="./halie-west.jpg"/>
+      </div>
+    </div>
+    <div class="page-holder">
+      <div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+          harum, commodi ullam, animi voluptatibus architecto autem doloremque
+          quisquam, provident vero rem neque repellendus sint? Consequatur rerum
+          non aut eos debitis.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
