--- a/index.html
+++ b/index.html
@@ -8,18 +8,53 @@
   </head>
   <body>
     <div class="image-holder">
+      <div class="test">
+        <h1>ODIN</h1>
+        <img src="odin-lined.png" alt="">
+      </div>
       <div>
         <img class="side-background" src="./halie-west.jpg"/>
       </div>
     </div>
-    <div class="page-holder">
-      <div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-          harum, commodi ullam, animi voluptatibus architecto autem doloremque
-          quisquam, provident vero rem neque repellendus sint? Consequatur rerum
-          non aut eos debitis.
-        </p>
+    <div class="main-page">
+      <div class="intro-text">
+        <h2>This is not a real online service! You know you need something like this in your real life to help you realize your deepest dreams.</h2>
+        <h2>Sign up now to get started.</h2>
+        <h2>You know you want to.</h2>
+      </div>
+      <div class="form-holder">
+        <form action="">
+          <div class="name-holder">
+            <input type="text" name="first-name" id="first-name">
+            <label for="first-name">First Name</label>
+          </div>
+          <div class="surname-holder">
+            <input type="text" name="surname" id="surname">
+            <label for="surname">Surname</label>
+          </div>
+          <div class="mail-holder">
+            <input type="email" name="email" id="email">
+            <label for="email">Email</label>
+          </div>
+          <div class="phone-holder">
+            <input type="tel" name="phone" id="phone">
+            <label for="phone">Phone Number</label>
+          </div>
+          <div class="password-holder">
+            <input type="password" name="password" id="password">
+            <label for="password">Password</label>
+          </div>
+          <div class="confirm-password-holder">
+            <input type="password" name="confirm-password" id="confirm-password">
+            <label for="confirm-password">Confirm Password</label>
+          </div>
+          <div class="submit-holder">
+            <button type="submit">Create Account</button>
+          </div>
+        </form>
+        <div>
+          <p>Already have an account? <span>Log in</span></p>
+        </div>
       </div>
     </div>
   </body>
