--- a/index.html
+++ b/index.html
@@ -18,48 +18,74 @@
         <h2>
           This is not a real online service! You know you need something like
           this in your real life to help you realize your deepest dreams.
+          <br />Sign up now to get started.
         </h2>
-        <h2>Sign up now to get started.</h2>
         <h2>You know you want to.</h2>
       </div>
       <div class="form-holder">
-        <form action="">
-          <div class="name-holder">
-            <input type="text" name="first-name" id="first-name" />
-            <label for="first-name">First Name</label>
-          </div>
-          <div class="surname-holder">
-            <input type="text" name="surname" id="surname" />
-            <label for="surname">Surname</label>
-          </div>
-          <div class="mail-holder">
-            <input type="email" name="email" id="email" />
-            <label for="email">Email</label>
-          </div>
-          <div class="phone-holder">
-            <input type="tel" name="phone" id="phone" />
-            <label for="phone">Phone Number</label>
-          </div>
-          <div class="password-holder">
-            <input type="password" name="password" id="password" />
-            <label for="password">Password</label>
-          </div>
-          <div class="confirm-password-holder">
+        <h2>Let's do this!</h2>
+        <form action="" method="get" class="speaker-form">
+          <label for="firstname"
+            >First Name
+            <input type="text" id="firstname" name="firstname" required />
+            <div id="first-name-error" class="error"></div>
+          </label>
+          <label for="lastname"
+            >Last Name
+            <input type="text" id="lastname" name="lastname" required />
+            <div id="last-name-error" class="error"></div>
+          </label>
+          <label for="email"
+            >Email
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              autocomplete="off"
+            />
+            <div id="email-error" class="error"></div>
+          </label>
+          <label for="phonenumber"
+            >Phone Number
+            <input
+              type="tel"
+              id="phonenumber"
+              name="phonenumber"
+              required
+              pattern="[0-9]{10}"
+            />
+            <div id="tel-error" class="error"></div>
+          </label>
+          <label for="password"
+            >Password
             <input
               type="password"
-              name="confirm-password"
-              id="confirm-password"
+              id="password"
+              name="password"
+              required
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
             />
-            <label for="confirm-password">Confirm Password</label>
-          </div>
-          <div class="submit-holder">
-            <button type="submit">Create Account</button>
-          </div>
+            <div id="password-error" class="error"></div>
+          </label>
+          <label for="passwordC"
+            >Confirm Password
+            <input
+              type="password"
+              id="passwordC"
+              name="passwordC"
+              required
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+            />
+            <div id="passwordC-error" class="error"></div>
+          </label>
         </form>
-        <div>
-          <p>Already have an account? <span>Log in</span></p>
-        </div>
+      </div>
+      <div class="submit-holder">
+        <button type="submit">Create Account</button>
+        <p>Already have an account? <a>Log in</a></p>
       </div>
     </div>
+    
   </body>
 </html>
